--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>カラーマッチ・シューター</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
 </head>
+
 <body>
     <div id="start-screen">
         <h1>カラーマッチ・シューター</h1>
@@ -23,7 +27,7 @@
         </div>
         <canvas id="game-canvas"></canvas>
     </div>
-    
+
     <div id="game-over-screen" class="hidden">
         <h2>ゲームオーバー</h2>
         <p>スコア: <span id="final-score">0</span></p>
@@ -36,4 +40,5 @@
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
